<resources>

    <string name="design">design</string>

    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="mail">Mail</string>
    <string name="sign_in_uppercase">SIGN IN</string>
    <string name="already_registered">Already Registered</string>
    <string name="password_again">Password Again</string>
    <string name="sign_up_uppercase">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>