<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.furkandursun.musicplayerapp.ui.fragments.SignInFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:elevation="16dp"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/mailEditTextSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordEditTextSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:textColor="@android:color/black"
            android:layout_marginTop="20dp"
            android:textSize="18sp" />



        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="@string/sign_up"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>



</LinearLayout>
