<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:elevation="16dp"
        android:orientation="vertical"
        android:padding="16dp">
    <EditText
        android:id="@+id/mailEditTextSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="@color/dark"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_again"
        android:inputType="numberPassword"
        android:textColor="@color/dark"
        android:textSize="18sp" />

        <Button
            android:id="@+id/signUpButtonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:text="Sign Up"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
